--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -376,9 +376,9 @@ f x1 x2 x3 False = Inhab
 Similarly, the extracted program for non-measure induction is a recursion operation \texttt{Rec}.
 
  it is possible to write the operation \texttt{Rec list} $\rho$ $\implies$ $\tau$ using a function
-f : listρ ⇒ τ which gives a more intuitive view of its behaviour.
-\begin{lstlisting}
-(Rec listρ ⇒ τ)ys z G = f ys where
+f : list $\rho \implies \tau$ which gives a more intuitive view of its behaviour.
+\begin{lstlisting}[mathescape]
+(Rec list $\rho \implies \tau$)ys z G = f ys where
 f Nil = z
 f (x :: xs) = G x xs(f xs)
 \end{lstlisting}
