--- a/EVDP.tex
+++ b/EVDP.tex
@@ -336,7 +336,7 @@ provided.
 
 \section{Soundness and Completness of the Resolution Proof System}
 
-The resolution proof system~\cite{AR65} is widely used in practical
+The resolution proof system~\cite{JR65} is widely used in practical
 applications, for instance in tools for proof checking and debugging
 \cite{tracecheck} or interchange between different solvers
 \cite{CK13}. State-of-the-art SAT solvers such as MiniSAT
