--- a/lit.bib
+++ b/lit.bib
@@ -1453,6 +1453,17 @@
   publisher = {Kluwer Academic Publishers}
 }
 
+@INPROCEEDINGS{tracecheck,
+  author = {Sinz, C. and Biere, A.},
+  title = {Extended Resolution Proofs for Conjoining {BDDs}},
+  booktitle = {CSR},
+  year = {2006},
+  editor = {Grigoriev, D. and Harrison, J. and Hirsch, E.},
+  volume = {3967},
+  series = {Lecture Notes in Computer Science},
+  pages = {600--611}
+}
+
 @ARTICLE{GS94,
   author = {St{\aa}lmarck , G.},
   title = {System for determining propositional logic theorems by applying values
