--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -171,15 +171,16 @@ This predicate holds if there is a train in the configuration with object identi
 We can use these two properties and others formulated in a similar fashion to formulate model checkng properties which can be used check the correctness of our modelling approach. We can define three safety conditions, one that states "train1 is in the cons state if and only it is at its max speed". The second states "if the speed of train1 is zero then it is either in the cons, stop or acc states and if the train is in the stop state then its speed is zero". The final states "it is not the case that there exists a state in which the speed of train1 is 5" (train1 has a max speed of 4). 
 
 \begin{lstlisting}
-Correct1 := (mc initialstate2 |=t  ~(<> train-s(train1,5)) in time <= 80 .)
-Correct2 := (mc initialstate2 |=t [] (train-s(train1,4) => train-cons(train1)) /\ (train-cons(train1) => train-s(train1,4))  in time <= 80 .)
+Correct1 := (mc initialstate2 |=t  
+  ~(<> train-s(train1,5)) in time <= 100 .)
+Correct2 := (mc initialstate2 |=t 
+  [] (train-s(train1,4) => train-cons(train1)) /\ 
+     (train-cons(train1) => train-s(train1,4))  
+  in time <= 100 .)
 Correct3 := (mc initialstate2 |=t [] ((train-s(train1,0) => 
-  (train-stop(train1) \/ train-brake(train1) \/ train-acc(train1))) /\ 
-     (train-stop(train1) => train-s(train1,0))) in time <= 80 .)
-
-
+  (train-stop(train1) \/ train-brake(train1) \/ train-acc(train1))) 
+   /\ (train-stop(train1) => train-s(train1,0))) in time <= 100 .)
 \end{lstlisting}
-
 
 \subsection*{Defining "No Overlapping Movement Authorities"}
 We verifying the safety condition "The movment authorities of two trains do not overlap" by model checking three safety properties MA1, MA2 and MA3 that correspond to checking the different possible safe positions over movement authorities and trains on the track. To do this we define a satisfaction relation for two Maude operations of type $\mathbf{Prop}$ which capture each of these safety properties. The first of which can be seen below:
