--- a/EVDP.tex
+++ b/EVDP.tex
@@ -340,7 +340,7 @@ The resolution proof system~\cite{JR65} is widely used in practical
 applications, for instance in tools for proof checking and debugging
 \cite{tracecheck} or interchange between different solvers
 \cite{CK13}. State-of-the-art SAT solvers such as MiniSAT
-\cite{miniSAT} and zChaff \cite{MM01} return (extended) resolution
+\cite{NE04} and zChaff \cite{MM01} return (extended) resolution
 proofs for unsatisfiable problems.  By formalizing that every DPLL
 derivation has an equivalent resolution derivation, and combining this result
 with the completeness proof from the previous section, we can extract
