--- a/lit.bib
+++ b/lit.bib
@@ -894,6 +894,17 @@
   publisher = {AAAI Press}
 }
 
+@INPROCEEDINGS{CK13,
+  author = {Keller, C.},
+  title = {Extended Resolution as Certificates for Propositional Logic},
+  booktitle = {Proof Exchange for Theorem Proving},
+  year = {2013},
+  editor = {Blanchette, Jasmin Christian and Urban, Josef},
+  volume = {14},
+  series = {EPiC Series},
+  pages = {96--109}
+}
+
 @ARTICLE{KR01,
   author = {Kerr, D. and Rowbotham, T.},
   title = {Introduction to {R}ailway {S}ignalling},
