--- a/lit.bib
+++ b/lit.bib
@@ -226,7 +226,7 @@
 
 @ARTICLE{UB08,
   author = {Berger, U. and Hou, T.},
-  title = {Coinduction for Extact Real Number Compu},
+  title = {Coinduction for Extact Real Number Computation},
   journal = {Theory of Computing Systems},
   year = {2008},
   volume = {43},
@@ -1391,6 +1391,15 @@
   pages = {91--110},
   issue = {2,3},
   publisher = {IOS Press}
+}
+
+@ARTICLE{JR68,
+  author = { Robinson, J. A.},
+  title = {The generalized resolution principle},
+  journal = {Machine Intelligence},
+  year = {1968},
+  volume = {3},
+  pages = {77--94}
 }
 
 @ARTICLE{JR65,
