--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -415,7 +415,7 @@ The theorem \texttt{DPLLSucces} is partitioned into several sub theorems or lemm
 
 
 \section{The Extracted DPLL Solver (XSAT)}
-The following section we shall look at the behaviour of the extracted SAT algorithm, which we shall refer to as XSAT, when run inside the Minlog system. In chapter \ref{} we compare various implementations of this SAT algorithm with another verified SAT algorithm Versat \cite{}.
+The following section we shall look at the behaviour of the extracted SAT algorithm, which we shall refer to as XSAT, when run inside the Minlog system. In chapter \ref{} we compare various implementations of this SAT algorithm with another verified SAT algorithm Versat \cite{DO12}.
 
 The \texttt{mk-term-in-app-form} command used to apply the extracted algorithm to a pigeon hole formula PHP(2,1), which represents the program of putting two pigeons into one hole, in CNF. The normalise term command \texttt{nt} command is then used to execute the algorithm via minlogs built in term rewriting system.
 
