--- a/Main.tex
+++ b/Main.tex
@@ -250,7 +250,7 @@
 \newcommand{\moddpll}[1]{\overset{#1}{\underset{\text{\tiny DPLL}}{\vdash}}}
 \newcommand{\True}{\mathrm{True}}
 \newcommand{\muu}[3]{\mu(#1;#2;#3)}
-\newcommand{\measure}[2]{|#2 \setminus\!\!\setminus \var (#1)|}
+\newcommand{\measure}[2]{|#2 \setminus\!\!\setminus \var{#1}|}
 \newcommand{\weight}[1]{\#(#1)}
 
 
