added ladder logic reference

--- a/lit.bib
+++ b/lit.bib
@@ -51,6 +51,13 @@
   publisher = {Springer Berlin Heidelberg}
 }
 
+@BOOK{IEC03,
+  title = {Programmable Controllers - Part 3: Programming languages},
+  publisher = {IEC},
+  year = {2003},
+  author = {IEC Standard 61131-3}
+}
+
 @INCOLLECTION{GS06,
   author = {Abdulla, P. and Deneux, J. and St{\aa}lmarck, G. and {\AA}gren, H.
 	and {\AA}kerlund, O.},
