--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -106,7 +106,7 @@ of such solid state interlockings.
 \end{comment}
 \section{Invensys Rail}
 
-Invensys Rail \cite{Inven} has been producing train control equipment and safety devices for over 140 years starting with its original incarnation Westinghouse Rail Systems Ltd. 
+Siemens Rail Automation \cite{Siemens} has been producing train control equipment and safety devices for over 140 years starting with its original incarnation Westinghouse Rail Systems Ltd and subsequent incarnation Invensys Rail. 
 The first such safety device was train air brakes, if the power was cut from the train then the brake would automatically kick in, entering a failsafe state. The company was also charged with supporting British Rail in its development of the first solid state digital railway interlocking to be installed in Leamington Spa. Currently their operations are focused on supplying railway control systems globally with customers in Australia, Hong Kong, Germany , Spain and the UK. One of the products produced by Invensys that we are interesting in is  a solid state interlocking called the Westrace. This interlocking continually receives input from the railway, decides whether or not a request or railway state is safe using a Ladder Logic program and prevents the railway from entering unsafe states. This ladder logic will be explained later in this chapter. Further information on the railway domain including terminology and methodology can be found in a book by David Kerr and Tony Rowbotham (See \cite{KR01}.)
 \begin{comment}
 
