--- a/lit.bib
+++ b/lit.bib
@@ -1316,7 +1316,7 @@
   title = {{KeY}maera: A hybrid theorem prover for hybrid systems},
   booktitle = {Automated Reasoning, 4th International Joint Conference on (IJCAR)},
   year = {2008},
-  editor = {Armando, A. and Baumgartner, P, and Dowek, G.},
+  editor = {Armando, A. and Baumgartner, P. and Dowek, G.},
   volume = {5195},
   series = {Lecture {N}otes in {C}omputer {S}cience},
   pages = {171--178},
@@ -1435,7 +1435,7 @@
   title = {Minlog Reference Manual},
   howpublished = {\url{http://www.mathematik.uni-muenchen.de/~logik/minlog/cronfiles/ref.pdf}},
   year = {2014},
-  note = {Accessed:  23-07-14},
+  note = {Accessed: 23-07-14},
   owner = {andylawrence},
   timestamp = {2014.07.23}
 }
@@ -1645,6 +1645,11 @@
 
 @MISC{Scade,
   note = {Scade, http://www.esterel-technologies.com}
+}
+
+@MISC{Siemens,
+  title = {Siemens {R}ail {A}utomation webpage, last accessed in {J}uly 2014},
+  note = {http://http://www.mobility.siemens.com/mobility/global/en/rail-solutions/rail-automation/Pages/rail-automation.aspx}
 }
 
 @BOOK{,
