--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -16,7 +16,7 @@
 
 
 \thesischapter{Extracting a Clause Learning SAT Algorithm}{Extracting a Clause Learning SAT Algorithm} \label{chapter:cdclproof}
-In the following chapter we shall describe how a clause learning SAT algorithm can be extracted from a modified DPLL proof system (see chapter \ref{chapter:dpll} in combination with a modified unit resolution proof system. The $\Conflict$ rule is modified such that a clause is learned and stored as part of the sequent. The $\Split$ rule allows for these learned clauses to be transfered up the first branch of the proof tree and then used in the proof search of the next branch. This has the implication that the $\Split$ rule is no longer symmetric and has a more imperative nature. The unit resolution proof system have been modified so that it captures the behaviour of the of the conflict graph (See chapter \ref{chapter:satbackground}.). We define a property which captures a complete\footnote{This is not completeness in the proof theoretic sense but in the sense that the set contains the right number of clauses  and that they come with associated unit resolution proofs} set of unit resolution derived clauses with respect to a valuation such that each resolved clause has a unit resolution derivation from a clause the original formula.
+In the following chapter we shall describe how a clause learning SAT algorithm can be extracted from a modified DPLL proof system (see chapter \ref{chapter:dpll} in combination with a modified unit resolution proof system. The $\Conflict$ rule is modified such that a clause is learned and stored as part of the sequent. The $\Split$ rule allows for these learned clauses to be transfered up the first branch of the proof tree and then used in the proof search of the next branch. This has the implication that the $\Split$ rule is no longer symmetric and has a more imperative nature. The unit resolution proof system have been modified so that it captures the behaviour of the of the conflict graph (See chapter \ref{chapter:satbackground}.). We define a property which captures a complete\footnote{This is not completeness in the proof theoretic sense but in the sense that the set contains the right number of clauses  and that they come with associated unit resolution proofs} set of unit resolution derived clauses with respect to a valuation such that each resolved clause has a unit resolution derivation from a clause the original formula. The extracted program makes use of these clause during the search for a satisfiying assignment. If this set of clauses becomes empty then the current valuation forms a model of the formula. An occurence of the empty clause in this set of clauses in
 
  Further more, to this end, the valuations used in this proof have a modification to store the rule and level at which a literal has been added. 
 
@@ -93,6 +93,8 @@ $\forall D,l,n,n'( (D \, l \, n) \in \Gamma \wedge (D \, l \, n') \in \Gamma \to
 \end{mydef}
 \hspace{1mm} \\
 %
+The modified DPLL proof system retains the \Split, \Conflict and \Unit rules in a modified form, however the function of the \Elim and \Reduce rules have been replaced by a modified unit resolution proof system. The DPLL derivation relation has an additional argument which is place under the turnstyle $\vdash_{\Delta'}$ which is used to capture the transfer of learned clauses up through the proof tree towards the root. The manipulation of individual clauses in the formula to be solved is carried out using the unit resolution proof system. When a derivation of a unit clause or empty clause is discovered during the unit resolution proof search this proof is plugged into the appropriate DPLL rule.
+
 \begin{mydef}[Modified DPLL Proof System] The DPLL proof system consists 
 of three rules:
 %
@@ -131,8 +133,9 @@ of three rules:
 \hspace{1mm}
  \\
 %
+The modified unit resolution proof system contains 
 \medskip
-\begin{mydef}[Modified Unit Resolution Proof System] The modified Unit Resolution proof system consists of three rules:
+\begin{mydef}[Modified Unit Resolution Proof System] The modified Unit Resolution proof system consists of four rules:
 \begin{center}
 %
 \AxiomC{$S \, l \, n \in \Gamma$}
