--- a/lit.bib
+++ b/lit.bib
@@ -457,6 +457,18 @@
   publisher = {Springer Berlin / Heidelberg}
 }
 
+@ARTICLE{EC01,
+  author = {Clarke, E. and Biere, A. and Raimi, R. and Zhu, Y.},
+  title = {Bounded Model Checking Using Satisfiability Solving},
+  journal = {Formal},
+  year = {2001},
+  volume = {19},
+  pages = {7--34},
+  number = {1},
+  owner = {andylawrence},
+  timestamp = {2014.07.31}
+}
+
 @ARTICLE{EC97,
   author = {Clarke, E. M.},
   title = {Model Checking},
@@ -555,6 +567,20 @@
   author = {Cormen, T. H. and Leiserson C. E. and Rivest, R. L. and Stein, C.
 	L.},
   volume = {2}
+}
+
+@INPROCEEDINGS{CC91,
+  author = {Courcoubetis, C. and Vardi, M. and Wolper, P. and Yannakakis, M.},
+  title = {Memory efficient Algorithms for the verification of temporal properties},
+  booktitle = {Computer-Aided Verification},
+  year = {1991},
+  editor = {Clarke, E. M. and Kurshan, P. K.},
+  volume = {531},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {233--242},
+  publisher = {Springer Berlin / Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.07.31}
 }
 
 @ARTICLE{HC58,
@@ -1351,7 +1377,7 @@
 
 @INPROCEEDINGS{JQ82,
   author = {Queille, J. P. and Sifakis},
-  title = {Specification and verification of concurrent systems in CESAR},
+  title = {Specification and verification of concurrent systems in {CESAR}},
   booktitle = {International Symposium on Programming: Proceedings of the 5th Colloquium
 	Turin},
   year = {1982},
