--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -165,14 +165,13 @@ from left to right until no further equivalence is applicable.
 \section{Model Checking Propositional Safety Properties Using a SAT Solver}
 
 
-In the following we shall introduce two general types of model checking  which are applied to check propositional safety properties over discrete systems using a SAT. The first is inductive verification, which is split into two steps consisting of a base case and a step case.   The second that we shall discuss is bounded model checking which attempts to verify a property of the system with an exhaustive search up to a particular depth. There are other types of model checking including temporal induction which has the benefits of both inductive verification and bounded model checking however suffers in terms of speed and the size of the resulting problem. All of these problems are formulated in propositional logic and then translated into CNF using the Tseitin Translation.
+In the following we shall introduce two general types of model checking  which are applied to check propositional safety properties over discrete systems using a SAT solver \cite{MS00,EC01}. The first is inductive verification, which is split into two steps consisting of a base case and a step case.   The second that we shall discuss is bounded model checking which attempts to verify a property of the system with an exhaustive search up to a particular depth. There are other types of model checking including temporal induction which has the benefits of both inductive verification and bounded model checking however suffers in terms of speed and the size of the resulting problem. All of these problems are formulated in propositional logic and then translated into CNF using the Tseitin Translation.
 
 
 
 \subsection*{Inductive Verification}
 
-
-The base case checks that the safety property holds in all intial states of the system. The step case checks that if the system is in a state in which the safety property holds and a transition occurs then the resulting state is also safe, for all possible safe states and transitions out of those states. This method has the advantage over other model checking techniques that it is fast and can verify then entire state space. The disadvantage is that if the safety property is violated then you obtain a pair of states as a counter example instead of a sequence of states that form a counter example trace.
+Inductive verification attempts to use induction over the transition relation in order to perform verification formulated in such a way that a SAT solver can be used to solve the problem \cite{MS00}. The base case checks that the safety property holds in all intial states of the system. The step case checks that if the system is in a state in which the safety property holds and a transition occurs then the resulting state is also safe, for all possible safe states and transitions out of those states. This method has the advantage over other model checking techniques that it is fast and can verify then entire state space. The disadvantage is that if the safety property is violated then you obtain a pair of states as a counter example instead of a sequence of states that form a counter example trace.
 \medskip
 \begin{mydef}[Inductive Verification]
 Given a transition system $M$ and a safety property $\phi$ we define inductive verification as follows:
@@ -183,7 +182,7 @@ $$indstep_M(\phi) : \forall s,s' \in S \wedge R(s, s') \to s \models \phi  \to s
 \end{mydef}
 \medskip
 \subsection*{Bounded Model Checking}
-One of the most important model checking techniques in terms of industrial applications is bounded model checking. All possible paths through the system are safety property checked up to a certain bound. This approach is most useful for falisification checking i.e. finding errors and their causes. It is scaleable to industrial applications as they typically exhibit all of their possible behaviours after a short number of time steps. In the following we make use of the abbreviation $\sseq{n}{m} \models \phi \leftrightarrow s_n \models \phi \wedge \ldots \wedge  s_m \models \phi$ when writing that a formula holds $\phi$ in a sequence of states $\sseq{n}{m}$.
+One of the most important model checking techniques in terms of industrial applications is bounded model checking. All possible paths through the system are safety property checked up to a certain bound. This approach is most useful for falisification checking i.e. finding errors and their causes. It is scaleable to industrial applications as they typically exhibit all of their possible behaviours after a short number of time steps. We present a formalisation that is geared towards the application of SAT solvers \cite{EC01}. In the following we make use of the abbreviation $\sseq{n}{m} \models \phi \leftrightarrow s_n \models \phi \wedge \ldots \wedge  s_m \models \phi$ when writing that a formula holds $\phi$ in a sequence of states $\sseq{n}{m}$.
 \medskip
 \begin{mydef}[Bounded Model Checking]
 Given a transition system $M$, a safety property $\phi$ and a bound $k$ we define bounded model checking $bmc_M(\phi,k)$ as follows:
@@ -194,7 +193,7 @@ $$bmc_M(\phi,k):= \forall \sseq{0}{k} \subseteq S \to  path_R(\sseq{0}{k}) \to S
 \textbf{Note to self: I need to add something on loop freedom and inclusion checking for sat based model checking, I also need to describe the LTL model checker in Maude which uses Buchi automaton.}  
 
 \section{On-the-fly Model Checking of Linear Temporal Logic Properties}
-The Maude LTL model checker performs on-the-fly model checking of an LTL property $\phi$.
+The Maude LTL model checker performs on-the-fly model checking \cite{CC91} of an LTL property $\phi$.
 This process of mode checking linear temporal logic involves first  negating the linear temporal  logic property, placing it in negation normal form and then constructing a B{\"u}chi automata for that property that accepts the language of counter examples $\neg \phi$. The product of the Buchi automata and the state transition system is constructed and a double depth first search is applied to search for strongly connected components with a state in which $\neg \phi$ holds.
 
 \subsection{B{\"u}chi Automata}
