--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -93,8 +93,8 @@ $\forall D,l,n,n'( (D \, l \, n) \in \Gamma \wedge (D \, l \, n') \in \Gamma \to
 \end{mydef}
 \hspace{1mm} \\
 %
-The modified DPLL proof system retains the \Split, \Conflict and \Unit rules in a modified form, however the function of the \Elim and \Reduce rules have been replaced by a modified unit resolution proof system. The DPLL derivation relation has an additional argument which is place under the turnstyle $\vdash_{\Delta'}$ which is used to capture the transfer of learned clauses up through the proof tree towards the root. The manipulation of individual clauses in the formula to be solved is carried out using the unit resolution proof system. When a derivation of a unit clause or empty clause is discovered during the unit resolution proof search this proof is plugged into the appropriate DPLL rule.
-
+The modified DPLL proof system retains the $\Split$, $\Conflict$ and $\Unit$ rules in a modified form, however the function of the $\Elim$ and $\Red$ rules have been replaced by a modified unit resolution proof system. The DPLL derivation relation has an additional argument which is place under the turnstyle $\vdash_{\Delta'}$ which is used to capture the transfer of learned clauses up through the proof tree towards the root. The manipulation of individual clauses in the formula to be solved is carried out using the unit resolution proof system. When a derivation of a unit clause or empty clause is discovered during the unit resolution proof search this proof is plugged into the appropriate DPLL rule. \\
+\medskip
 \begin{mydef}[Modified DPLL Proof System] The DPLL proof system consists 
 of three rules:
 %
