--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -209,7 +209,7 @@ We define a \Buchi automaton $A$ is a five-tuple $(L, S,T,S_0, F)$ where:
 \item $F \subseteq S$ is an acceptance condition. The automaton A accepts only the infinite runs which contain at least one state occuring in $F$
 \end{mydef}
 
-The translation of the LTL property into a \Buchi automata takes 3 steps following the approach of Gastin and Oddoux \cite{}:
+The translation of the LTL property into a \Buchi automata takes 3 steps following the approach of Gastin and Oddoux \cite{PG01}:
 
 \begin{enumerate}
 \item Construct a very weak alternating (VWA) automata
