--- a/lit.bib
+++ b/lit.bib
@@ -736,6 +736,20 @@
   timestamp = {2014.04.10}
 }
 
+@INPROCEEDINGS{PG01,
+  author = {Gastin, P. and Oddoux, D.},
+  title = {Fast {LTL} to {B}{\"u}chi Automata Translation},
+  booktitle = {{P}roceedings of the 13th {I}nternational {C}onference on {C}omputer
+	{A}ided {V}erification ({CAV}'01)},
+  year = {2001},
+  editor = {Berry, G. and Comon, H. and Finkel, A.},
+  volume = {2102},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {53--65},
+  publisher = {Springer Berlin / Heidelberg},
+  url = {http://www.lsv.ens-cachan.fr/Publis/PAPERS/PS/Cav01go.ps}
+}
+
 @INCOLLECTION{GG69,
   author = {Gerhard Gentzen},
   title = {Investigations into Logical Deduction},
